finally figured out  how to fix vertical spacing between grid items in #type-grid

--- a/project/styles/pokemon-type-matchup-tool.css
+++ b/project/styles/pokemon-type-matchup-tool.css
@@ -90,7 +90,7 @@ nav {
 #eighteen-types-container {
     margin: 4.5rem 0.25rem 1.75rem 0.25rem;
     display: grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 2fr 1fr;
     position: relative;
     width: 100%;
@@ -112,18 +112,23 @@ nav {
 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(13px, 1fr));
     align-items: start;
-    gap: 0.01rem;
+    gap: 0.25rem;
 }
 
 #type-grid>img {
     width: 100%;
-    height: auto;
-    max-width: 80px;
-    object-fit: scale-down;
-    display: block;
-    margin: 0;
-    padding: 0;
+    height: 100%;
+    max-height: 22px;
+    max-width: 100px;
+    transition: transform 0.15s ease-in-out;
+}
+#type-grid>img:first-child {
+}
+
+#type-grid>img:hover {
+    transform: scale(1.2);
 }
 
 #pokemon-example
